build: import inventory modal styles

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 @import "./components/DevToolsModal.css";
 @import "./components/Header.css";
 @import "./components/InfoModal.css";
+@import "./components/InventoryModal.css";
 @import "./components/ParentCard.css";
 @import "./components/Tabs.css";
 @import "./components/common/Modal.css";
