build: import placeholder card styles

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
 @import "./components/InfoModal.css";
 @import "./components/InventoryModal.css";
 @import "./components/ParentCard.css";
+@import "./components/common/PlaceholderCard.css";
 @import "./components/Tabs.css";
 @import "./components/common/Modal.css";
 @import "./components/common/MultiSelect.css";
