style: import selectgrandparentmodal styles

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
 @import "./components/InventoryModal.css";
 @import "./components/ParentCard.css";
 @import "./components/common/PlaceholderCard.css";
+@import "./components/SelectGrandparentModal.css";
 @import "./components/Tabs.css";
 @import "./components/common/Modal.css";
 @import "./components/common/MultiSelect.css";
