style: import new component stylesheets

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@
 @import "./components/ParentCard.css";
 @import "./components/common/PlaceholderCard.css";
 @import "./components/SelectGrandparentModal.css";
+@import "./components/SelectUmaModal.css";
+@import "./components/common/SelectionSlot.css";
 @import "./components/Tabs.css";
 @import "./components/common/Modal.css";
 @import "./components/common/MultiSelect.css";
