--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
 @import "./components/Header.css";
 @import "./components/InfoModal.css";
 @import "./components/InventoryModal.css";
+@import "./components/common/LineageDisplay.css";
 @import "./components/ParentCard.css";
 @import "./components/common/PlaceholderCard.css";
 @import "./components/SelectGrandparentModal.css";
