--- a/src/components/common/SuggestionParentCard.css
+++ b/src/components/common/SuggestionParentCard.css
@@ -8,6 +8,7 @@
 }
 
 .suggestion-card__main-info {
+    position: relative;
     display: flex;
     align-items: center;
     gap: 0.75rem;
@@ -41,6 +42,9 @@
 }
 
 .suggestion-card__grandparents {
+    position: absolute;
+    top: 0;
+    right: 0;
     display: flex;
     gap: 0.25rem;
 }
