--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
 @import "./components/InfoModal.css";
 @import "./components/InventoryModal.css";
 @import "./components/common/LineageDisplay.css";
+@import "./components/common/LineageTree.css";
 @import "./components/ParentCard.css";
 @import "./components/common/PlaceholderCard.css";
 @import "./components/SelectGrandparentModal.css";
