--- a/src/components/BreedingPlannerModal.css
+++ b/src/components/BreedingPlannerModal.css
@@ -180,7 +180,7 @@
 .breeding-planner__detail-sparks {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 0.5rem;
     margin-top: 1.5rem;
     padding-top: 1.5rem;
