style(rangeslider): add standard css appearance property

--- a/src/components/common/RangeSlider.css
+++ b/src/components/common/RangeSlider.css
@@ -24,6 +24,7 @@
 
 .range-slider__input {
     -webkit-appearance: none;
+    appearance: none;
     width: 100%;
     height: 6px;
     background: var(--color-border);
