style(rangeslider): add centered variant for header

--- a/src/components/common/RangeSlider.css
+++ b/src/components/common/RangeSlider.css
@@ -10,6 +10,10 @@
     align-items: center;
 }
 
+.range-slider__header--centered {
+    justify-content: center;
+}
+
 .range-slider__label {
     font-size: 0.75rem;
     font-weight: 500;
