--- a/src/components/common/InventoryControls.css
+++ b/src/components/common/InventoryControls.css
@@ -89,6 +89,7 @@
 .inventory-controls__filter-row .form__input,
 .inventory-controls__filter-row .searchable-select {
     flex-grow: 1;
+    min-width: 0;
 }
 
 .inventory-controls__remove-btn {
