--- a/src/css/elements/Form.css
+++ b/src/css/elements/Form.css
@@ -29,6 +29,11 @@
     box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
     border-color: var(--color-border-active);
 }
+.form__checkbox {
+    border-radius: 0.25rem;
+    border-color: var(--color-border-input);
+    accent-color: var(--color-button-primary-bg);
+}
 
 .form__static-text {
     width: 100%;
