style: import top breeding pair styles

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@
 @import "./components/SelectUmaModal.css";
 @import "./components/common/SelectionSlot.css";
 @import "./components/Tabs.css";
+@import "./components/TopBreedingPair.css";
 @import "./components/common/Modal.css";
 @import "./components/common/MultiSelect.css";
 @import "./components/common/SearchableSelect.css";
